# geckolib

./: .devcontainer.json  .gitignore  README.md  client.py  geckoautomation.py  geckolib.py  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/workflows/: lint.yml  python-package.yml
sample/: abstract_display.py  complete.py  config.py  context.py  context_sample.py  cui.py  tui.py
scripts/: generate  test
src/geckolib/: __init__.py  __main__.py  _version.py  async_locator.py  async_spa.py  async_spa_descriptor.py  async_spa_manager.py  async_taskman.py  async_tasks.py  automation.py  comms.py  config.py  const.py  decorators.py  facade.py  geckoautomation.py  geckolib.py  heater.py  keypad.py  locator.py  manager.py  pump.py  responses.py  sensors.py  spa.py  spa_connection_events.py  spa_connection_state.py  spa_descriptor.py  spa_events.py  spa_state.py  spastruct.py  switches.py  watercare.py
src/geckolib/automation/: __init__.py  async_facade.py  bainultra.py  base.py  blower.py  bubblegen.py  button.py  facade.py  heater.py  heatpump.py  ingrid.py  inmix.py  keypad.py  keypad_backlight.py  light.py  lockmode.py  mrsteam.py  number.py  old_async_facade.py  power.py  pump.py  reminders.py  select.py  sensors.py  switch.py  switches.py  watercare.py  waterfall.py
src/geckolib/driver/: __init__.py  accessor.py  async_peekablequeue.py  async_spastruct.py  async_udp_protocol.py  comms.py  decorators.py  observable.py  responses.py  spapack.py  spastruct.py  udp_protocol_handler.py  udp_socket.py  user_demands_parser.py
src/geckolib/utils/: __init__.py  async_command.py  shared_command.py  shell.py  simulator.py  simulator_action.py  (+1 more)
tests/: client.py  context.py  diag.py  packgen.py  pytest.ini  simulator.py  test_accessor.py  test_async_locator.py  test_peekable_queue.py  test_protocol.py  test_protocol_channel.py  test_protocol_file.py  test_protocol_hello.py  test_protocol_pack_command.py  test_protocol_packet.py  test_protocol_ping.py  test_protocol_reminders.py  test_protocol_status_block.py  test_protocol_version.py  test_protocol_watercare.py  test_snapshot.py  test_snapshots.py  test_spaman.py  test_struct.py  test_udp_socket.py
tests/snapshots/: 3-pump-types.snapshot  BainUltraTest.snapshot  BainUltraWithChromo.snapshot  InMix-3-zones-C5S2.snapshot  InMix-3-zones.snapshot  InMix-4-zones.snapshot  L120-Light-Off.snapshot  L120-Light-On.snapshot  all-outputs.snapshot  default.snapshot  default2.snapshot  inXM-Heating-2020-12-08 19:53:28.snapshot  inXM-Idle-2020-12-09 11:14:06.snapshot  inXM-Pump 1 and 2 running-2020-12-08 19_54_19.snapshot  inXM-Pump 1 running-2020-12-08 19_54_01.snapshot  inXM-Pump 1, 2 and blower running-2020-12-08 19:54:44.snapshot  inXM-Pump 1, 2, Blower and Light running-2020-12-08 19:55:06.snapshot  inXM-after reboot-2020-10-25 12_55_26.snapshot  inXM-helpful info-2020-10-22 21:41:49.snapshot  inXM-later after relaxing in it-2020-10-25 17:36:31.snapshot  inXM-no flow error-2020-10-25 12:48:51.snapshot  inYJ-All off-2020-12-18 11:24:09.snapshot  inYJ-blue-2020-12-18 11:26:06.snapshot  inYJ-multicolour-2020-12-18 11_26_34.snapshot  inYJ-red-2020-12-18 11_25_22.snapshot  inYT-64-Connection found-2020-12-15 16_50_32.snapshot  inYT-Connection found-2020-12-12 09:36:48.snapshot  inYT-CoolingTo59-2020-12-09 08:04:39.snapshot  inYT-CoolingTo59-2020-12-13 11_19_35.snapshot  inYT-E2000-BothOff-2025-02-16-02_08_43.850137+00_00.snapshot  inYT-E2000-BothOn-2025-02-16-02_12_38.814032+00_00.snapshot  inYT-E2000-L120-2025-02-16-02_11_16.447660+00_00.snapshot  inYT-EconomyModeActive-2020-12-09 08:04:39.snapshot  inYT-EconomyModeActive-2020-12-13 11:19:35.snapshot  inYT-EconomyModeInactive-2020-12-09 08:04:39.snapshot  inYT-HeatingTo100-2020-12-09 08:04:39.snapshot  inYT-HeatingTo100-2020-12-13 11:19:35.snapshot  inYT-LightOnTempSetTo100Pump1Lo-2020-12-13 11_19_35.snapshot  inYT-LightsOff-2020-12-09 08:04:39.snapshot  inYT-LightsOn-2020-12-09 08:04:39.snapshot  (+23 more)
(+238 files in other folders)
