[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py36", "py37", "py38"]
exclude = 'generated'
line-length = 88

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = []
forced_separate = []
combine_as_imports = true
multi_line_output = 3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
indent = "    "
# by default isort don't check module indexes
not_skip = '__init__.py'
sections = ['FUTURE','STDLIB','THIRDPARTY','FIRSTPARTY','LOCALFOLDER']
default_section = 'THIRDPARTY'
#known_first_party = custom_components.gecko
