[metadata]
name = geckolib
version = attr: geckolib.__version__
author = Gazoodle
author_email = gazoodle@hash.fyi
license = GPLv3
description = A library to interface with Gecko Alliance products using in.touch2
keywords = Gecko Alliance, in.touch2, library, Home Automation
url = https://github.com/gazoodle/geckolib
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
install_requires =
    urllib3
    python_version>="3.6"
packages = find:
package_dir =
    =src
zip_safe = False

[options.packages.find]
where=src

# flake8 doesn't currently support pyproject.toml, so settings are in here
[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
doctests = True
# To work with Black
max-line-length = 88
# Some errors and warnings need to be disabled since black forces them in
# E203: Whitespace before ':'
# W503: Line break occurred before a binary operator
# W504 line break after binary operator
ignore = E203, W503, W504

